syntax = "proto3";

import "common.proto";
import "common_rpc.proto";

option java_package = "electionguard.protogen";
option java_outer_classname = "DecryptingTrusteeProto";

service DecryptingTrusteeService {
  rpc partialDecrypt (PartialDecryptionRequest) returns (PartialDecryptionResponse) {}
  rpc compensatedDecrypt (CompensatedDecryptionRequest) returns (CompensatedDecryptionResponse) {}
  rpc finish (FinishRequest) returns (ErrorResponse) {}
}

message PartialDecryptionRequest {
  ElementModQ extended_base_hash = 1; // The election extended_base_hash.
  repeated ElGamalCiphertext text = 2; // The text(s) to decrypt.
}

message PartialDecryptionResponse {
  string error = 1; // non empty on error
  repeated PartialDecryptionResult results = 2;;
}

message PartialDecryptionResult {
  ElementModP decryption = 1;
  ChaumPedersenProof proof = 2;
}

message CompensatedDecryptionRequest {
  ElementModQ extended_base_hash = 1; // The election extended_base_hash.
  string missing_guardian_id = 2; // The id of the guardian that's missing.
  repeated ElGamalCiphertext text = 3; // The text(s) to decrypt.
}

message CompensatedDecryptionResponse {
  string error = 1; // non empty on error
  repeated CompensatedDecryptionResult results = 2;;
}

message CompensatedDecryptionResult {
  ElementModP decryption = 1;
  ChaumPedersenProof proof = 2;
  ElementModP recoveryPublicKey = 3;
}



